Sun Jan 25 06:15:54 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * examples/PICML/AntiSPAM/AntiSPAM.xme:
        * examples/PICML/AntiSPAM/CPUBoundImpl_exec.h:
        * examples/PICML/AntiSPAM/CPUBoundImpl_exec.cpp:

          . Added port identifiers to the log messages.

Sun Jan 25 06:05:33 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/workers/CPU/CPU_Worker.cpp:

          . Bug fix where we actually didn't get the workload. Instead,
            we were only checking if a given workload existed.

Sun Jan 25 05:58:37 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * examples/PICML/AntiSPAM/AntiSPAM.mwc:
        * examples/PICML/AntiSPAM/AntiSPAM.xme:
        * examples/PICML/AntiSPAM/CPUBoundImpl_exec.cpp:

          . Added support for logging the CPU workers profile.

Sun Jan 25 05:38:01 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/CCM_Event_Handler_T.cpp:

          . Fixed compilation errors on Windows.

        * cuts/workers/CPU/CPU_Worker.h:
        * cuts/workers/CPU/CPU_Worker.cpp:

          . Added support to querying for a workload given a key.

Sun Jan 25 05:30:31 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/logging/server/TestLoggerServer_i.cpp:

          . Removed unnecessary log messages.

Sun Jan 25 05:26:50 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/CCM_Event_Handler_T.cpp:

          . Forced all threads in the event handler to bind to the
            first CPU if their affinity flag is set.

Sun Jan 25 04:53:48 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/logging/server/Logging_Server.h:
        * cuts/utils/logging/server/Logging_Server.inl:
        * cuts/utils/logging/server/Logging_Server.cpp:
        * cuts/utils/testing/svcs/logging/Test_Logging_Service.cpp:

          . Bug fix where the logger server was not up-to-date with the